fixed spacing and alignments

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -5,7 +5,7 @@ body {
 .navbar {
 	margin-left: auto;
 	margin-right: auto;
-	width: 85%;
+	width: 80%;
 	backdrop-filter: blur(15px) saturate(100%);
 	-webkit-backdrop-filter: blur(15px) saturate(100%);
 	background-color: rgba(19, 54, 103, 0.25);
@@ -26,6 +26,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	margin: 0px 9px 0px 9px;
+	padding: 5px 15px 5px 15px;
 }
 
 .nav-item:hover {
@@ -33,7 +34,7 @@ body {
 }
 
 .logo {
-	width: 60px;
+	width: 50px;
 	margin-bottom: 5px;
 	margin-right: 20px;
 }
@@ -41,7 +42,7 @@ body {
 .toggle-div {
 	display: flex;
 	margin: auto auto auto auto;
-	justify-content: right;
+	justify-content: center;
 }
 
 .toggle-div span {
